--- a/index.html
+++ b/index.html
@@ -341,6 +341,19 @@ Junior Fullstack Developer</p>
                                         target="_blank">Rock-Paper-Scissors:</a></h2>
                                 <p class="mb-2 text-lg font-normal text-gray-100 dark:text-gray-100  opacity-100">An iteration of the traditional game "Rock-Paper-Scissors," reminiscent of our childhood pastime. Drawing inspiration from various online renditions, I have employed HTML, CSS, and JavaScript in its development. </p>
                             </div>
+                            <div
+                            class="relative flex flex-col items-start justify-end h-full  overflow-hidden rounded-xl  ">
+                            <a href="https://replit.com/@kosbas2007/EcstaticPeruKeyboardmacro#main.py" target="_blank"
+                                class="block w-full transition duration-300 ease-in-out transform bg-center bg-cover h-96 hover:scale-110"
+                                style="background-image:url('images/hangman.png')">
+                            </a>
+                            <div
+                                class="relative z-20 w-full h-auto py-8 dark:text-white text-[#0A192F] bg-[#070070]  dark:bg-[#286D5D] border-t-0 border-yellow-200 px-7">
+ 
+                                <h2 class="mb-5 text-3xl  text-gray-100 font-semibold"><a href="https://replit.com/@kosbas2007/EcstaticPeruKeyboardmacro#main.py"
+                                        target="_blank">Hangman Game:</a></h2>
+                                <p class="mb-2 text-lg font-normal text-gray-100 dark:text-gray-100  opacity-100">An iteration of the traditional game "Hangman" reminiscent of our childhood pastime. Drawing inspiration from various online renditions, I have employed Python in this development. </p>
+                            </div>
                         </div>
                     </div>
                 </div>
