--- a/index.html
+++ b/index.html
@@ -341,6 +341,7 @@ Junior Fullstack Developer</p>
                                         target="_blank">Rock-Paper-Scissors:</a></h2>
                                 <p class="mb-2 text-lg font-normal text-gray-100 dark:text-gray-100  opacity-100">An iteration of the traditional game "Rock-Paper-Scissors," reminiscent of our childhood pastime. Drawing inspiration from various online renditions, I have employed HTML, CSS, and JavaScript in its development. </p>
                             </div>
+                        </div>
                             <div
                             class="relative flex flex-col items-start justify-end h-full  overflow-hidden rounded-xl  ">
                             <a href="https://replit.com/@kosbas2007/EcstaticPeruKeyboardmacro#main.py" target="_blank"
