--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@ Junior Fullstack Developer</p>
                     </div>
                         <div
                             class="relative flex flex-col items-start justify-end h-full  overflow-hidden rounded-xl  ">
-                            <a href="https://kostas9093.github.io/RPS/" target="_blank"
+                            <a href="https://kostas9093.github.io/Rock-Paper-Scissors/" target="_blank"
                                 class="block w-full transition duration-300 ease-in-out transform bg-center bg-cover h-96 hover:scale-110"
                                 style="background-image:url('images/rps.png')">
                             </a>
